serializer compatibility change
Signed-off-by: pythoncoder1234 <fdsnail2@gmail.com>