@@ -9,12 +9,10 @@ import java.lang.annotation.Annotation;
 import java.lang.reflect.Field;
 import java.util.*;
 
+@SuppressWarnings({"rawtypes", "unchecked"})
 public final class Serializer
 {
-
     public static HashMap<Class<?>, Object> defaults = new HashMap<>();
-
-    public static HashMap<String, Tank> userTanks = new HashMap<>();
 
     public static Class<?> getCorrectClass(Object o)
     {
@@ -51,16 +49,16 @@ public final class Serializer
 
     public static boolean isTanksONable(Object o)
     {
-        if (o != null)
+        if (o == null)
+            return false;
+
+        Class<?> c = o.getClass();
+        while (c != null)
         {
-            Class c = o.getClass();
-            while (c != null)
-            {
-                if (c.isAnnotationPresent(TanksONable.class))
-                    return true;
-                else
-                    c = c.getSuperclass();
-            }
+            if (c.isAnnotationPresent(TanksONable.class))
+                return true;
+            else
+                c = c.getSuperclass();
         }
         return false;
     }
@@ -69,7 +67,7 @@ public final class Serializer
     {
         if (f != null)
         {
-            Class c = f.getType();
+            Class<?> c = f.getType();
             while (c != null)
             {
                 if (c.isAnnotationPresent(TanksONable.class))
@@ -97,72 +95,69 @@ public final class Serializer
         return null;
     }
 
-    public static String getid(Field f)
+    public static String getId(Field f)
     {
         return f.getAnnotation(Property.class).id();
     }
 
     public static Map<String, Object> toMap(Object o)
     {
-        if (isTanksONable(o))
+        if (!isTanksONable(o))
+            return null;
+
+        HashMap<String, Object> p = new HashMap<>();
+        p.put("obj_type", getAnnotation(o, TanksONable.class).value());
+        if (o instanceof Item)
         {
-            HashMap<String, Object> p = new HashMap<>();
-            p.put("obj_type", getAnnotation(o, TanksONable.class).value());
-            if (o instanceof Item)
-                try
-                {
-                    p.put("item_type", ((Item) o).getClass().getField("item_class_name").get(null));
-                }
-                catch (Exception ignore)
-                {
-                }
-            else if (o instanceof Bullet)
-                p.put("bullet_type", ((Bullet) o).typeName);
-
-
-            for (Field f : o.getClass().getFields())
+            try
             {
-                try
+                p.put("item_type", ((Item) o).getClass().getField("item_class_name").get(null));
+            }
+            catch (Exception ignore)
+            {
+            }
+        }
+        else if (o instanceof Bullet)
+            p.put("bullet_type", ((Bullet) o).typeName);
+
+
+        for (Field f : o.getClass().getFields())
+        {
+            try
+            {
+                if (f.isAnnotationPresent(Property.class) && (!(o instanceof Tank || o instanceof Bullet || o instanceof Mine || o instanceof Explosion) || !Objects.equals(f.get(getDefault(getCorrectClass(o))), f.get(o))))
                 {
-                    if (f.isAnnotationPresent(Property.class) && (!(o instanceof Tank || o instanceof Bullet || o instanceof Mine || o instanceof Explosion) || !Objects.equals(f.get(getDefault(getCorrectClass(o))), f.get(o))))
+                    Object o2 = f.get(o);
+                    if (o2 != null && isTanksONable(f))
                     {
-                        Object o2 = f.get(o);
-                        if (o2 != null && isTanksONable(f))
-                        {
-                            p.put(getid(f), toMap(o2));
-                        }
-                        else if (o2 instanceof ArrayList)
-                        {
-                            if (!((ArrayList) o2).isEmpty() && isTanksONable(((ArrayList) o2).get(0)))
-                            {
-                                ArrayList<Map<String, Object>> o3s = new ArrayList<>();
-                                for (Object o3 : ((ArrayList) o2))
-                                {
-                                    o3s.add(toMap(o3));
-                                }
-                                p.put(getid(f), o3s);
-                            }
-                            else
-                            {
-                                p.put(getid(f), f.get(o));
-                            }
-                        }
-                        else if (o2 instanceof Enum)
-                            p.put(getid(f), ((Enum) o2).name());
-                        else if (o2 instanceof Serializable)
-                            p.put(getid(f), ((Serializable) o2).serialize());
-                        else
-                            p.put(getid(f), f.get(o));
+                        p.put(getId(f), toMap(o2));
                     }
-                }
-                catch (Exception e)
-                {
-                    throw new RuntimeException(e);
+                    else if (o2 instanceof ArrayList)
+                    {
+                        if (!((ArrayList) o2).isEmpty() && isTanksONable(((ArrayList) o2).get(0)))
+                        {
+                            ArrayList<Map<String, Object>> o3s = new ArrayList<>();
+                            for (Object o3 : ((ArrayList) o2))
+                                o3s.add(toMap(o3));
+                            p.put(getId(f), o3s);
+                        }
+                        else
+                            p.put(getId(f), f.get(o));
+                    }
+                    else if (o2 instanceof Enum)
+                        p.put(getId(f), ((Enum) o2).name());
+                    else if (o2 instanceof Serializable)
+                        p.put(getId(f), ((Serializable) o2).serialize());
+                    else
+                        p.put(getId(f), f.get(o));
                 }
             }
-            return p;
+            catch (Exception e)
+            {
+                throw new RuntimeException(e);
+            }
         }
-        return null;
+        return p;
     }
 
     public static String toTanksON(Object o)
@@ -179,7 +174,8 @@ public final class Serializer
     {
         if (m == null)
             return null;
-        Object o = null;
+
+        Object o;
         switch ((String) m.get("obj_type"))
         {
             case "tank":
@@ -192,7 +188,7 @@ public final class Serializer
             {
                 try
                 {
-                    o = Game.registryBullet.getEntry((String) m.get("bullet_type")).bullet.newInstance();
+                    o = Game.registryBullet.getEntry((String) m.get("bullet_type")).bullet.getConstructor().newInstance();
                 }
                 catch (Exception e)
                 {
@@ -237,78 +233,66 @@ public final class Serializer
                 o = new TankReference((String) m.get("tank"));
                 break;
             default:
-                throw new RuntimeException("Bad object type: " + (String) m.get("obj_type"));
+                throw new RuntimeException("Bad object type: " + m.get("obj_type"));
         }
-
-        Set<String> processed = new HashSet<>();
 
         for (Field f : o.getClass().getFields())
         {
-            if (f.isAnnotationPresent(Property.class) && m.containsKey(getid(f)))
+            if (f.isAnnotationPresent(Property.class) && m.containsKey(getId(f)))
             {
-                processed.add(getid(f));
                 try
                 {
                     Object o2 = f.get(o);
                     if (isTanksONable(f))
                     {
-                        Object o3 = m.get(getid(f));
-                        try {
+                        Object o3 = m.get(getId(f));
+                        try
+                        {
                             f.set(o, parseObject((Map<String, Object>) o3));
-                        } catch (ClassCastException e) {
+                        }
+                        catch (ClassCastException e)
+                        {
                             f.set(o, Compatibility.convert(f, o3));
                         }
                     }
                     else if (o2 instanceof ArrayList)
                     {
-                        ArrayList arr = (ArrayList) m.get(getid(f));
+                        ArrayList arr = (ArrayList) m.get(getId(f));
                         if (!arr.isEmpty() && (arr.get(0) instanceof Map))
                         {
                             ArrayList o3s = new ArrayList();
-                            for (Map o3 : ((ArrayList<Map>) m.get(getid(f))))
-                            {
-                                o3s.add(parseObject(o3));
-                            }
+                            for (Map o3 : ((ArrayList<Map>) m.get(getId(f))))
+                                try
+                                {
+                                    o3s.add(parseObject(o3));
+                                }
+                                catch (Exception e)
+                                {
+                                    o3s.add(Compatibility.convert(f, o3));
+                                }
                             f.set(o, o3s);
                         }
                         else
-                            f.set(o, m.get(getid(f)));
+                            f.set(o, m.get(getId(f)));
                     }
                     else if (o2 instanceof HashSet)
-                        f.set(o, new HashSet<>((ArrayList) m.get(getid(f))));
+                        f.set(o, new HashSet<>((ArrayList) m.get(getId(f))));
                     else if (o2 instanceof Enum)
-                        f.set(o, Enum.valueOf((Class<? extends Enum>) f.getType(), (String) m.get(getid(f))));
+                        f.set(o, Enum.valueOf((Class<? extends Enum>) f.getType(), (String) m.get(getId(f))));
                     else if (o2 instanceof Serializable)
-                        f.set(o, ((Serializable) o2).deserialize((String) m.get(getid(f))));
+                        f.set(o, ((Serializable) o2).deserialize((String) m.get(getId(f))));
                     else if (o2 instanceof Integer)
-                        f.set(o, ((Double) m.get(getid(f))).intValue());
+                        f.set(o, ((Double) m.get(getId(f))).intValue());
                     else if (o2 instanceof Boolean)
-                        f.set(o, m.get(getid(f)));
+                        f.set(o, m.get(getId(f)));
                     else
-                        f.set(o, m.get(getid(f)));
+                        f.set(o, m.get(getId(f)));
                 }
                 catch (Exception e)
                 {
-                    System.out.println(getid(f));
+                    System.out.println(getId(f));
                     throw new RuntimeException(e);
                 }
-            }
-        }
-
-        Set<String> unused = m.keySet();
-        unused.removeAll(processed);
-        for (String k : unused) {
-            try {
-                o.getClass().getField(Compatibility.convert(k)).set(o, m.get(k));
-            } catch (ClassCastException e) {
-                try {
-                    Field f = o.getClass().getField(Compatibility.convert(k));
-                    f.set(o, Compatibility.convert(f, m.get(k)));
-                } catch (NoSuchFieldException | IllegalAccessException f) {
-                    throw new RuntimeException(f);
-                }
-            } catch (NoSuchFieldException | NullPointerException | IllegalAccessException e) {
-                System.out.println("Unconvertable field found!");
             }
         }
 
